--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-__pycache__/video_summarizer.cpython-312.pyc
-__pycache__/video_summarizer.cpython-312.pyc
-__pycache__/ollama.cpython-312.pyc
-__pycache__/video_summarizer.cpython-312.pyc
+__pycache__/
+__pycache__/
+__pycache__/
+__pycache__/
