--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ torchvision
 torchaudio
 watchdog
 ctranslate2==4.4.0
+google-generativeai>=0.7.2
 python-dotenv
 # Optional dependencies for advanced functionality
 requests
